Fix error boxes RHS alignment #87

--- a/_sass/_shows.sass
+++ b/_sass/_shows.sass
@@ -6,8 +6,6 @@
 
 .show-row
   @include grid-row
-  & > *:last-child
-    padding-right: 0
 
 .show-info
   @include grid-x-col(10)
